--- a/reseach/Text_Summarization.ipynb
+++ b/reseach/Text_Summarization.ipynb
@@ -458,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -547,6 +547,10 @@
         }
       ],
       "source": [
+        "\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "device\n",
+        "\n",
         "model_ckpt = \"google/pegasus-cnn_dailymail\"\n",
         "\n",
         "model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt).to(device) #load the model\n",
@@ -987,6 +991,13 @@
         "    score = metric.compute()\n",
         "    return score\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
