--- a/reseach/02_data_validation.ipynb
+++ b/reseach/02_data_validation.ipynb
@@ -99,7 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    " from textSummarizer.entity import DataIngestionConfig\n",
+    "\n",
+    "\n",
+    "def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
     "        \n",
     "        create_directories([config.root_dir])\n",
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "794b49a1",
    "metadata": {},
    "outputs": [
@@ -202,10 +205,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-07-18 10:33:50,175: INFO: common: yaml file: config\\config.yaml loaded successfully.]\n",
-      "[2025-07-18 10:33:50,177: INFO: common: yaml file: params.yaml loaded successfully.]\n",
-      "[2025-07-18 10:33:50,178: INFO: common: Created directory at: artifacts]\n",
-      "[2025-07-18 10:33:50,179: INFO: common: Created directory at: artifacts/data_validation]\n"
+      "[2025-07-18 16:17:54,445: INFO: common: yaml file: config\\config.yaml loaded successfully.]\n",
+      "[2025-07-18 16:17:54,448: INFO: common: yaml file: params.yaml loaded successfully.]\n",
+      "[2025-07-18 16:17:54,449: INFO: common: Created directory at: artifacts]\n",
+      "[2025-07-18 16:17:54,451: INFO: common: Created directory at: artifacts/data_validation]\n"
      ]
     }
    ],
